# foxidation

./: Cargo.toml  README.md  test2.txt
examples/: test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test_sat1.txt  test_sat2.txt  test_sat3.txt  test_sat4.txt
src/: main.rs  mathsymbols.rs
src/core/: expression.rs  filter.rs  literal.rs  mod.rs  symbols.rs  types.rs
src/parser/: cli.rs  grammar.pest  mod.rs  parser.rs
