[package]
name = "parser_learning"
version = "0.1.0"
authors = ["HTellez <hatellezp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "foxidation"
path = "src/main.rs"

[dependencies]
# for parsing (the best!)
pest = "*"
pest_derive = "*"

# for cli interface
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"

# colors for the terminal
colored = "*"

# for string formatting
pad = "0.1.6"
unicode-segmentation = "1.8.0"